packages/survey-core/src/default-theme/blocks/sd-question.scss
@use "../variables.scss" as *;
@use "../typography-mixins.scss" as *;

.sd-question {
  position: relative;
}

.sd-question__container {
  display: flex;
  flex-direction: column;
  row-gap: calc(0.5 * var(--sd-base-vertical-padding));
  column-gap: var(--sjs2-spacing-x300);
  height: 100%;
}

.sd-element--with-frame > .sd-question__container {
  gap: 0;
}

.sd-question__header-and-content-container {
  display: flex;
  flex: 1;
  flex-direction: column;
  padding-top: var(--sd-base-padding);
  padding-bottom: var(--sd-base-padding);
  padding-left: var(--sjs2-layout-component-question-content-padding-left, calc(var(--sd-base-padding) + var(--sv-element-add-padding-left, 0px)));
  padding-right: var(--sjs2-layout-component-question-content-padding-right, calc(var(--sd-base-padding) + var(--sv-element-add-padding-right, 0px)));
  row-gap: calc(0.5 * var(--sd-base-vertical-padding));
  column-gap: var(--sjs2-spacing-x300);
}

// TODO: Remove after new design system is implemented
.sd-element--with-frame.sd-question--title-top:not(.sd-element--collapsed):not(.sd-question--paneldynamic) > .sd-question__container {
  &>.sd-question__header-and-content-container {
    padding-top: var(--sd-base-vertical-padding);
  }
}
.sd-element--with-frame.sd-question--title-top:not(.sd-element--collapsed):not(.sd-element--complex)>div>.sd-element__erbox--above-element {
  &~.sd-question__header-and-content-container {
    padding-top: calc(0.5 * var(--sd-base-vertical-padding) + var(--sjs2-spacing-x100));
  }
}

.sd-question--title-bottom > .sd-question__container {
  &>.sd-question__header-and-content-container {
    row-gap: calc(0.375 * var(--sd-base-vertical-padding));
  }
}
// TODO: Remove after new design system is implemented
.sd-element--nested.sd-question--error-bottom:not(.sd-question--left) > .sd-question__container {
  row-gap: var(--sjs2-spacing-x100);
}

// TODO: Remove as not working
.sd-question--left {
  &>.sd-question__container {
    row-gap: var(--sjs2-spacing-x100);
    &>.sd-question__header-and-content-container {
      flex-direction: row;
      flex-wrap: wrap;
      column-gap: var(--sjs2-spacing-x300);
      row-gap: var(--sjs2-spacing-x100);
    }
  }
}

.sd-element--nested > div > .sd-question__header-and-content-container {
  padding: 0;
}

.sd-root--compact {
  .sd-question__header-and-content-container {
    padding: 0;
  }
}

.sd-question:not(.sd-element--with-frame) > .sd-question__container {
  .sd-question__header-and-content-container {
    padding: 0;
  }
}

.sd-question--single-input {
    &>.sd-question__container {
        &>.sd-question__header-and-content-container {
            padding: 0;
            &>.sd-paneldynamic__header {
                padding: 0;
            }
        }
    }
}

// .sd-question--left {
//   display: flex;
//   flex-wrap: wrap;
//   flex-direction: row;
//   column-gap: var(--sjs2-spacing-x300);
//   row-gap: calc(0.25 * var(--sd-base-vertical-padding));
//   align-items: anchor-center;
// }

.sd-question__header {
  display: flex;
  flex-direction: column;
  // padding-top: var(--sjs2-layout-component-question-header-padding-top, var(--sd-base-vertical-padding));
  // padding-bottom: var(--sjs2-layout-component-question-header-padding-bottom, calc(0.5 * var(--sd-base-vertical-padding)));
  // padding-left: var(--sjs2-layout-component-question-header-padding-left, calc(var(--sd-base-padding) + var(--sv-element-add-padding-left, 0px)));
  // padding-right: var(--sjs2-layout-component-question-header-padding-right, calc(var(--sd-base-padding) + var(--sv-element-add-padding-right, 0px)));
  row-gap: calc(0.25 * var(--sd-base-vertical-padding) - var(--sjs2-size-x050));
  // row-gap: var(--sjs2-layout-component-question-header-gap-vertical, var(--sjs2-spacing-x050));
  column-gap: var(--sjs2-layout-component-question-header-gap-horizontal, var(--sjs2-spacing-x150));
}

.sd-question__header--location--left {
  // padding-right: 0;
  // padding-bottom: var(--sjs2-layout-component-question-header-padding-top, var(--sd-base-vertical-padding));
  display: inline-block;
  width: auto;
  vertical-align: top;
  margin-top: var(--sjs2-spacing-x150);
}

.sd-question__content--left {
  flex: 1;
  max-width: 100%;
}

// .sd-question--title-bottom {
//   .sd-question__content {
//     padding-top: var(--sd-base-padding);
//     padding-bottom: 0;
//   }
//   .sd-question__header--location--bottom {
//     padding-top: calc(0.375 * var(--sd-base-vertical-padding));
//     padding-bottom: var(--sjs2-spacing-x500);
//   }
// }

.sd-question__title {
  @include sjs2--typography--component--question--title;
  // padding: var(--sjs2-layout-component-question-title-padding-vertical) var(--sjs2-layout-component-question-title-padding-horizontal);
}

.sd-question__title--empty {
  .sv-string-viewer {
    display: inline-block;
    height: multiply(1.5, $font-questiontitle-size);
  }
}

.sd-question__description {
  @include sjs2--typography--component--question--description;
  color: $font-questiondescription-color;
  white-space: normal;
  padding-inline: var(--sjs2-layout-component-question-description-padding-horizontal);
  // padding-top: var(--sjs2-layout-component-question-description-padding-top);
  // padding-bottom: var(--sjs2-layout-component-question-description-padding-bottom);
}

// .sd-question__content {
//   box-sizing: border-box;
// }

// .sd-question__content--left {
//   display: inline-block;
//   flex: 1;
//   padding-top: var(--sd-base-padding);
//   padding-left: 0;
//   // margin-top: calc(0.25 * var(--sd-base-vertical-padding)) 0;
//   max-width: 100%;
// }

// .sd-element--with-frame>.sd-question__content--left {
//   margin: 0;
// }

// .sd-question:not(.sd-element--with-frame) {
//   >.sd-question__header {
//     padding-top: 0;
//     padding-left: 0;
//     padding-right: 0;
//   }
//   >.sd-question__content {
//     padding: 0;
//   }
// }

// .sd-root-modern--mobile {
//   .sd-question__header {
//     padding-top: var(--sjs2-spacing-x200);
//     padding-left: var(--sjs2-spacing-x300);
//     padding-right: var(--sjs2-spacing-x300);
//     padding-bottom: var(--sjs2-spacing-x100);
//   }

//   .sd-question__content {
//     padding-left: var(--sjs2-spacing-x300);
//     padding-right: var(--sjs2-spacing-x300);
//     padding-bottom: var(--sjs2-spacing-x300);
//   }
// }

.sd-question--no-pointer-events {
  .sd-selectbase,
  .sd-rating {
    label {
      pointer-events: none;
    }
  }
}

// .sd-element__erbox--above-element {
//   margin-bottom: var(--sjs2-spacing-x100);
// }

// .sd-question__erbox--below-question {
//   margin-top: var(--sjs2-spacing-x100);
// }

.sd-question__content--support-container-queries {
  container-type: inline-size;
}

// .sd-question--title-top>.sd-question__erbox--above-question {
//   margin-bottom: calc(0.5 * var(--sd-base-vertical-padding));
// }

// .sd-question--description-under-input>.sd-question__erbox--below-question,
// .sd-question--title-bottom>.sd-question__erbox--below-question {
//   margin-top: calc(0.25 * var(--sd-base-vertical-padding) + var(--sjs2-spacing-x050));
// }

// .sd-element--with-frame>div>.sd-element__erbox {
//     position: sticky;
//     left: 0;
// }

.sd-element--with-frame>.sd-element__erbox--above-element {
  // margin-bottom: var(--sd-base-padding);
  border-radius: var(--sjs2-radius-component-panel) var(--sjs2-radius-component-panel) 0 0;
}
.sd-element--with-frame>div>.sd-element__erbox--above-element {
  // margin-bottom: var(--sd-base-padding);
  border-radius: var(--sjs2-radius-component-panel) var(--sjs2-radius-component-panel) 0 0;
}

.sd-element--with-frame>.sd-question__erbox--below-question {
  // margin-top: auto;
  border-radius: 0 0 var(--sjs2-radius-component-panel) var(--sjs2-radius-component-panel);
}
.sd-element--with-frame>div>.sd-question__erbox--below-question {
  // margin-top: auto;
  border-radius: 0 0 var(--sjs2-radius-component-panel) var(--sjs2-radius-component-panel);
}

// .sd-question--left>.sd-element__erbox--above-element {
//   margin-bottom: 0;
// }

// .sd-element--with-frame.sd-question--left>.sd-element__erbox--above-element {
//   margin-bottom: calc(1 * var(--sd-base-vertical-padding));
// }

// .sd-element--with-frame.sd-question--title-top>.sd-question__erbox--above-question {
//   margin-bottom: calc(0.5 * var(--sd-base-vertical-padding) + var(--sjs2-spacing-x100));
// }

// .sd-element--with-frame.sd-question--description-under-input>.sd-question__erbox--below-question,
// .sd-element--with-frame.sd-question--title-bottom>.sd-question__erbox--below-question {
//   margin-top: calc(0.5 * var(--sd-base-vertical-padding) + var(--sjs2-spacing-x100));
// }

.sd-question__description--under-input {
  padding-top: calc(0.375 * var(--sd-base-vertical-padding));
}

// .sd-question__header .sd-question__description {
//   margin-top: calc(0.25 * var(--sd-base-vertical-padding) - var(--sjs2-size-x050));
// }

// .sd-element--with-frame {
//   // &.sd-question--title-top {
//   //   padding-top: var(--sd-base-vertical-padding);
//   // }

//   // &.sd-question--error-top {
//   //   padding-top: 0;
//   // }

//   // &.sd-question--error-bottom {
//   //   padding-bottom: 0;
//   //   display: flex;
//   //   flex-direction: column;

//   //   // &>.sd-question__content {
//   //   //   margin-bottom: var(--sd-base-padding);
//   //   // }
//   // }

//   &>.sd-element__erbox {
//     // margin-left: calc(-1 * var(--sd-base-padding));
//     // margin-right: calc(-1 * var(--sd-base-padding));
//     // width: calc(100% + 2 * var(--sd-base-padding));
//     position: sticky;
//     left: 0;
//     // left: calc(-1 * var(--sd-base-padding));
//   }
// }

.sd-scrollable .sd-question__content {
  overflow-x: auto;
  padding: var(--sjs2-spacing-x200) 0;
}

.sd-question__required-text {
  color: $red;
  vertical-align: top;
}

.sd-question__comment-area {
  @include sjs2--typography--default;
  margin-top: var(--sjs2-spacing-x200);
  display: flex;
  flex-direction: column;
  gap: var(--sjs2-spacing-x100);
  color: $foreground;
  white-space: normal;
}

.sd-question__placeholder {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  gap: var(--sjs2-spacing-x200);
  justify-content: center;

  min-height: calc(var(--sjs2-base-unit-size) * 24);
  @include sjs2--typography--component--input--content;
  color: $font-questionplaceholder-color;

  &>div,
  &>span {
    .sv-string-viewer {
      white-space: pre-line;
    }
  }
}

.sd-scrollable-container:not(.sd-scrollable-container--compact) {
  width: max-content;
  overflow: visible;
  max-width: 100%;
}

